# ecosystemSim

./: CMakeLists.txt  README.md  debug.sh  diary.txt  run.sh
src/: entity.cpp  entity.hpp  game.cpp  game.hpp  main.cpp  nutrient.cpp  nutrient.hpp  obstacle.cpp  obstacle.hpp
src/graphics/: Viz.cpp  Viz.hpp
